[cleanup] Use the Base64 coding utilities from commons-codec instead of the proprietary sun.misc. package